fix: text not rendering correctly when using dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,15 +166,15 @@ a:hover {
 
 @media (max-width: 1000px) {
 	html {
-		background-color: var(--backgroundColorBodyDark);
+		background-color: var(--backgroundColorBody);
  	}
 
 	body {
-		background-color: var(--backgroundColorBodyDark);
+		background-color: var(--backgroundColorBody);
 	}
 
 	.main {
-		background-color: var(--backgroundColorBodyDark);
+		background-color: var(--backgroundColorBody);
 	}
 	
 	.bio-desktop {
@@ -224,5 +224,19 @@ a:hover {
 
 	li {
 		font-size: 2.0rem;
+	}
+
+	@media screen and (prefers-color-scheme: dark) {
+		html {
+			background-color: var(--backgroundColorBodyDark);
+			}
+		
+		body {
+			background-color: var(--backgroundColorBodyDark);
+		}
+		
+		.main {
+			background-color: var(--backgroundColorBodyDark);
+		}
 	}
 }
